--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<p></p>
 				<ul class="actions">
 					<li><a href="#" class="button icon fa-android">Play Store</a></li>
-					<li><a href="#" class="button ">Learn More</a></li>				
+					<li><a href="#" class="button icon fa-book">Learn More</a></li>				
 				</ul>
 			</section>
 
