--- a/studio/index.html
+++ b/studio/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="css\styles.css" rel="stylesheet" type="text/css">
+    <link href="css\augment_options.css" rel="stylesheet" type="text/css">
   </head><body>
     <div class="navbar navbar-default navbar-static-top">
       <div class="container">
@@ -58,22 +59,68 @@
             </div>
           </div>
           <div class="col-md-3">
-            <h2>Augment</h2>
             <div class="col-md">
-              <div class="btn-group btn-group-lg">
-                <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown"> Dropdown <span class="fa fa-caret-down"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                  <li>
-                    <a href="#">Action</a>
+              <dropdown>
+                <input id="toggle1" type="checkbox" checked="">
+                <label for="toggle1" class="animate">Editor
+                  <i class="fa fa-list float-right"></i>
+                </label>
+                <ul class="animate">
+                  <li class="animate">Text
+                    <i class="fa fa-code float-right"></i>
                   </li>
-                <li class="divider"></li></ul>
+                  <li class="animate">Image
+                    <i class="fa fa-picture-o float-right"></i>
+                  </li>
+                  <li class="animate">Button
+                    <i class="fa fa-link float-right"></i>
+                  </li>
+                  <li class="animate">Video
+                    <i class="fa fa-video-camera float-right"></i>
+                  </li>
+                  <li class="animate">HTML Magic
+                    <i class="fa fa-html5 float-right"></i>
+                  </li>
+                </ul>
+              </dropdown>
+            </div>
+            <h2>Widgets</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="section section-primary">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6">
+            <h1>Aryabhata Inc.</h1>
+            <p>Innovate-Recreate-Rejuvenate</p>
+          </div>
+          <div class="col-sm-6">
+            <p class="text-info text-right">
+              <br>
+              <br>
+            </p>
+            <div class="row">
+              <div class="col-md-12 hidden-lg hidden-md hidden-sm text-left">
+                <a href="#"><i class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a>
+                <a href="#"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a>
+                <a href="#"><i class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a>
+                <a href="#"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12 hidden-xs text-right">
+                <a href="#"><i class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a>
+                <a href="#"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a>
+                <a href="#"><i class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a>
+                <a href="#"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
               </div>
             </div>
           </div>
         </div>
       </div>
-      
-    </div><footer class="section section-primary"> <div class="container"> <div class="row"> <div class="col-sm-6"> <h1>Aryabhata Inc.</h1> <p>Innovate-Recreate-Rejuvenate</p></div><div class="col-sm-6"> <p class="text-info text-right"> <br><br></p><div class="row"> <div class="col-md-12 hidden-lg hidden-md hidden-sm text-left"> <a href="#"><i class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a> <a href="#"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a> <a href="#"><i class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a> <a href="#"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a> </div></div><div class="row"> <div class="col-md-12 hidden-xs text-right"> <a href="#"><i class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a> <a href="#"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a> <a href="#"><i class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a> <a href="#"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a> </div></div></div></div></div></footer>
+    </footer>
   
 
 </body></html>
